<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/verticalLayout"
        android:layout_width="411dp"
        android:layout_height="731dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="85dp"
            android:layout_height="114dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/employee_image"
            android:src="@drawable/employee1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/lastnameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="9dp"
            android:text="@string/lastname"
            app:layout_constraintEnd_toEndOf="@+id/verticalLayout"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="@+id/verticalLayout"
            app:layout_constraintTop_toBottomOf="@+id/firstnameTextView" />

        <TextView
            android:id="@+id/firstnameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/firstname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/verticalLayout" />

        <TextView
            android:id="@+id/jobtitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/jobtitle"
            app:layout_constraintEnd_toEndOf="@+id/verticalLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/firstnameTextView" />

        <TextView
            android:id="@+id/employeeInfoTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="20dp"
            android:text="@string/employee_information_text_here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/verticalLayout"
            app:layout_constraintTop_toBottomOf="@+id/jobtitleTextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/horizontalLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalLayout">

        <TextView
            android:id="@+id/oneTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textAlignment="center"
            android:onClick="numberClicked"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/twoTextView"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textAlignment="center"
            android:onClick="numberClicked"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/threeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textAlignment="center"
            android:onClick="numberClicked"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/fourTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textAlignment="center"
            android:onClick="numberClicked"
            android:padding="800dp"/>

        <TextView
            android:id="@+id/fiveTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textAlignment="center"
            android:onClick="numberClicked"
            android:padding="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
